# update-invoices-xmls

./: .env-sample  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: config.py  constants.py  drive.py  files.py  gmail.py  main.py  parser.py  parserv2.py
src/models/: google.py
