[project]
name = "update-invoices-xmls"
version = "0.1.0"
description = "Update invoice XMLs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "APScheduler",
    "beautifulsoup4",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "lxml",
    "pydantic",
    "python-decouple",
    "pytz",
    "tenacity",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
